<resources>
    <string name="app_name">NetAdmin</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="check">check</string>
    <string name="titlepassword">Enter password:</string>
    <string name="ok">Save</string>
    <string name="action_about">About</string>
    <string name="about">About programm</string>
    <string name="about_text">this program display arp data from server which get arp-table from Cisco router, append manufacturer and customer names from database</string>
    <string name="ipaddress">192.168.1.4</string>
    <string name="titleipaddress">ip address:</string>
    <string name="titleport">Port:</string>
    <string name="title_activity_Control_panel">control</string>
    <string name="titlemacaddress">mac address:</string>
    <string name="titlefactory">factory:</string>
    <string name="titlename">name:</string>
    <string name="string_button_on">On</string>
    <string name="string_button_off">off</string>
    <string name="string_button_low">low</string>
    <string name="string_button_medium">medium</string>
    <string name="button_save">Save</string>
    <string name="button_on">On</string>
    <string name="button_off">Off</string>
    <string name="button_full">Full</string>
    <string name="button_low">Low</string>
    <string name="string_button_ping">PING</string>
    <string name="pinganswer">...</string>
    <string name="database">DATABASE</string>
    <string name="cisco">CISCO</string>
</resources>