<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/background5"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/title_ipaddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/y"
            android:textAlignment="center"
            android:text="@string/titleipaddress"
            android:textSize="@dimen/dimentionIP"/>


        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:ems="3"
            android:textAlignment="center"
            android:textColor="@color/g"
            android:textSize="@dimen/dimentionIP">
        </EditText>

        <TextView
            android:id="@+id/title_macaddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@color/y"
            android:textAlignment="center"
            android:text="@string/titlemacaddress"
            android:textSize="@dimen/dimentionIP"/>


        <EditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:ems="3"
            android:textAlignment="center"
            android:textColor="@color/g"
            android:textSize="@dimen/dimentionIP">
        </EditText>

        <TextView
            android:id="@+id/title_factory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@color/y"
            android:textAlignment="center"
            android:text="@string/titlefactory"
            android:textSize="@dimen/dimentionIP"/>

        <EditText
            android:id="@+id/editText3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:ems="3"
            android:textAlignment="center"
            android:textColor="@color/g"
            android:textSize="@dimen/dimentionIP">

        </EditText>

        <TextView
            android:id="@+id/title_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@color/y"
            android:textAlignment="center"
            android:text="@string/titlename"
            android:textSize="@dimen/dimentionIP"/>

        <EditText
            android:id="@+id/editText4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:ems="3"
            android:textAlignment="center"
            android:textColor="@color/g"
            android:textSize="@dimen/dimentionIP">

        </EditText>

        <Button
            android:id="@+id/button_save"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:textColor="@color/y"
            android:text="@string/ok" >
        </Button>

        <Button
            android:id="@+id/button_on"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:textColor="@color/y"
            android:text="@string/string_button_on" >
        </Button>

        <Button
            android:id="@+id/button_off"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:textColor="@color/y"
            android:text="@string/string_button_off" >
        </Button>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_bottom_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#222222"
        android:clickable="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dip" >

        <Button
            android:id="@+id/button_read_cisco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Read Ci"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />
        />

    </LinearLayout>

</RelativeLayout>